<resources>
    <string name="app_name">梦想照近现实</string>


    <string name="title_tab_classic">经典</string>
    <string name="title_tab_newest">最新</string>
    <string name="title_tab_uncompleted">已完成</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_login">登陆</string>
    <string name="action_register">注册</string>
    <string name="action_dream">写梦想</string>
    <string name="action_login_out">退出</string>
    <string name="action_settings">个人设置</string>
    <string name="title_activity_login">登陆</string>
    <string name="title_activity_register">注册</string>

    <string name="title_activity_dream">写下我的梦想</string>

    <string name="no_login_tips">为了梦想，先登陆或注册吧！</string>
    <string name="name_or_password_blank">请输入用户名密码！</string>
    <string name="dream_or_reality_blank">少年，你还没有填写你的梦想和现实拿！</string>

    <string name="vote_after_login">请先登陆！</string>

    <string name="submit_text">提交</string>
    <string name="dream_text">梦想</string>
    <string name="reality_text">现实</string>
    <string name="write_dream_hint">我的梦想闪耀着彩色的光！</string>
    <string name="write_reality_hint">歪，醒醒！</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">Detail</string>

    <string name="button_cancel">取消</string>
    <string name="button_confirm">确定</string>
    <string name="back_or_not">请确认</string>
    <string name="next">下一步</string>
    <string name="back_no_save">少年，确定要推出写梦想，你所填写的内容将不被保存！</string>

    <string name="shaonian_dream_tint">少年，写下你的梦想！</string>

    <string name="dream_piture">图片</string>
    <!-- Strings related to login -->
    <string name="prompt_name">用户名</string>
    <string name="prompt_mobile">手机号码</string>
    <string name="mobile_password_blank">手机号码或密码不能为空！</string>
    <string name="verify_code_blank">验证码不能为空！</string>
    <string name="verify_code_error">验证码错误，请输入正确验证码！</string>

    <string name="mobile_number_format_error">请输入正确的手机号码！</string>
    <string name="nick_name_blank">昵称不能为空！</string>
    <string name="verify_code_system_error">对不起，手机验证码发送失败，请稍后再试！</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_password_confirm">密码确认</string>
    <string name="register_verify_code">注册验证码</string>
    <string name="verify_code">验证码</string>
    <string name="nick_name">昵称</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="resend_verify_code">重新发送</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="title_activity_nickname">NicknameActivity</string>


    <string name="drop_down_list_header_default_text">Click to refresh&#8230;</string>
    <string name="drop_down_list_header_pull_text">Drop Down to refresh&#8230;</string>
    <string name="drop_down_list_header_release_text">Release to refresh&#8230;</string>
    <string name="drop_down_list_header_loading_text">Loading&#8230;</string>
    <string name="drop_down_list_footer_default_text">More</string>
    <string name="drop_down_list_footer_loading_text">Loading&#8230;</string>
    <string name="drop_down_list_footer_no_more_text">No More</string>

    <string name="image_content">Image</string>



    <string name="hello">Hello World, LoadMoreListView!</string>

    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开并刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label"></string>
    <!-- 上拉，下拉，提示语 -->
    <string name="pull_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放刷新</string>
    <string name="refreshing">加载中...</string>
    <string name="update_time">最后更新: 今天\u0020</string>
</resources>
