<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".MainActivity">

    <item android:id="@+id/action_login" android:title="@string/action_login"
        android:orderInCategory="90" app:showAsAction="never" />
    <item android:id="@+id/action_register" android:title="@string/action_register"
        android:orderInCategory="95" app:showAsAction="never" />
    <item android:id="@+id/action_dream" android:title="@string/action_dream"
        android:orderInCategory="96" app:showAsAction="never" />
    <item android:id="@+id/action_verify" android:title="@string/verify_code"
        android:orderInCategory="96" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
