
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        app:theme="@style/BlueToolbar"
        app:popupTheme="@style/BluePopupMenu"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:title="@string/action_register"
        >

    </android.support.v7.widget.Toolbar>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >

        <ScrollView android:id="@+id/register_form"

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout android:id="@+id/email_login_form"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/mobile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_mobile"
                    android:textSize="18dp"
                    android:inputType="text"
                    android:singleLine="true"/>


                <EditText android:id="@+id/password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:textSize="18dp"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true" />

                <Button android:id="@+id/register_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textSize="18dp"
                    android:text="@string/title_activity_register"
                    android:textColor="@color/white_opaque"
                    android:textStyle="bold" />

            </LinearLayout>

        </ScrollView>
    </RelativeLayout>

</LinearLayout>
