<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        app:theme="@style/PurpleBlueToolbar"
        app:popupTheme="@style/PurplePopupMenu"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:title="@string/action_login"
        >

    </android.support.v7.widget.Toolbar>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">




        <LinearLayout android:id="@+id/email_login_form"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username_txt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:hint="@string/prompt_email"
                android:singleLine="true"/>


            <EditText android:id="@+id/password_txt" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:textSize="18dp"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />

            <Button android:id="@+id/sign_in_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in_short"
                android:textSize="18dp"
                android:textColor="@color/white_opaque"
                android:textStyle="bold" />

            <TextView android:id="@+id/register_txt"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="18dp"
                android:text="@string/action_register"
                android:textStyle="bold" />

        </LinearLayout>



    </RelativeLayout>

</LinearLayout>

