
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        app:theme="@style/BlueToolbar"
        app:popupTheme="@style/BluePopupMenu"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:title="@string/verify_code"
        >

    </android.support.v7.widget.Toolbar>


            <LinearLayout android:id="@+id/email_login_form"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <TextView
                    android:id="@+id/mobile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:textSize="20dp"
                    android:inputType="text"
                    android:singleLine="true"/>


                <EditText android:id="@+id/verify_code" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/verify_code"

                    android:maxLines="1" android:singleLine="true" />



                <Button android:id="@+id/resend_verify"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textSize="18dp"
                    android:text="@string/resend_verify_code"
                    android:textColor="@color/white_opaque"
                    android:textStyle="bold" />

                <Button android:id="@+id/next"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textSize="18dp"
                    android:text="@string/next"
                    android:textColor="@color/white_opaque"
                    android:textStyle="bold" />

            </LinearLayout>



</LinearLayout>
